feat: add immune breaker state
